@@ -193,6 +193,7 @@ class WC_Payments_API_Client {
 		$request['capture_method'] = $manual_capture ? 'manual' : 'automatic';
 		$request['metadata']       = $metadata;
 		$request['level3']         = $level3;
+		$request['description']    = $this->get_intent_description( $metadata['order_id'] ?? 0 );
 
 		if ( WC_Payments_Features::is_sepa_enabled() ) {
 			$request['payment_method_types'] = [ Payment_Method::CARD, Payment_Method::SEPA ];
@@ -228,6 +229,7 @@ class WC_Payments_API_Client {
 	 * @param int    $amount          - Amount to charge.
 	 * @param string $currency_code   - Currency to charge in.
 	 * @param array  $payment_methods - Payment methods to include.
+	 * @param int    $order_id        - The order ID.
 	 *
 	 * @return WC_Payments_API_Intention
 	 * @throws API_Exception - Exception thrown on intention creation failure.
@@ -235,11 +237,13 @@ class WC_Payments_API_Client {
 	public function create_intention(
 		$amount,
 		$currency_code,
-		$payment_methods
+		$payment_methods,
+		$order_id
 	) {
 		$request                         = [];
 		$request['amount']               = $amount;
 		$request['currency']             = $currency_code;
+		$request['description']          = $this->get_intent_description( $order_id );
 		$request['payment_method_types'] = $payment_methods;
 
 		$response_array = $this->request( $request, self::INTENTIONS_API, self::POST );
@@ -1430,5 +1434,24 @@ class WC_Payments_API_Client {
 		);
 
 		return $intent;
+	}
+
+	/**
+	 * Returns a formatted intention description.
+	 *
+	 * @param  int $order_id The order ID.
+	 * @return string        A formatted intention description.
+	 */
+	private function get_intent_description( int $order_id ): string {
+		$domain_name = str_replace( [ 'https://', 'http://' ], '', get_site_url() );
+		$blog_id     = $this->get_blog_id();
+
+		// Forgo i18n as this is only visible in the Stripe dashboard.
+		return sprintf(
+			'Online Payment%s for %s%s',
+			0 !== $order_id ? " for Order #$order_id" : '',
+			$domain_name,
+			null !== $blog_id ? " blog_id $blog_id" : ''
+		);
 	}
 }
