@@ -104,6 +104,7 @@ Please note that our support for the checkout block is still experimental and th
 = 2.7.0 - 2021-xx-xx =
 * Add - Add a link to the snackbar notice that appears after submitting or saving evidence for a dispute challenge.
 * Fix - WooCommerce Payments admin pages redirect to the onboarding page when the WooCommerce Payments account is disconnected.
+* Update - Set a description when creating payment intents.
 
 = 2.6.1 - 2021-07-01 =
 * Fix - Updates the notes query filters to prevent breaking the WooCommerce > Home inbox.
